fix: Submit button display on mobile
Adding vendor prefix to input styling to fix
submit button appearance on iphone/mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -725,6 +725,12 @@ a[href^="tel"] {
 
 /* Contact Form */
 
+input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 input::placeholder,
 textarea::placeholder {
   font-family: 'Lato', sans-serif;
